[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "memary"
version = "0.1.2"
authors = [
  { name="memary Labs", email="hello@memarylabs.com" },
]
description = "Longterm Memory for Autonomous Agents"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "FalkorDB==1.0.8",
    "neo4j==5.17.0",
    "python-dotenv==1.0.1",
    "pyvis==0.3.2",
    "streamlit==1.38.0",
    "llama-index>=0.12.0",
    "llama-index-agent-openai",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai",
    "llama-index-graph-stores-nebula",
    "llama-index-graph-stores-neo4j",
    "llama-index-graph-stores-falkordb",
    "llama-index-legacy",
    "llama-index-llms-openai",
    "llama-index-multi-modal-llms-openai",
    "llama-index-program-openai",
    "llama-index-question-gen-openai",
    "llama-index-readers-file",
    "langchain==0.1.12",
    "langchain-openai==0.0.8",
    "llama-index-llms-perplexity",
    "llama-index-multi-modal-llms-ollama",
    "llama-index-llms-ollama",
    "pandas",
    "geocoder",
    "googlemaps",
    "ansistrip",
    "numpy",
    "ollama",
    "fastapi",
    "uvicorn",
    "llama-cpp-python==0.3.14",
    "llama-index-llms-llama-cpp>=0.4.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/kingjulio8238/memary"
Issues = "https://github.com/kingjulio8238/memary/issues"
